fix: all problems with appheader on mobile
- add available for work on top
- remove necessary btn from appheader on mobile
- add nerd conect btn

--- a/src/app/(profile)/(components)/MyProfile/ProfileTopBar/ProfileTopBar.module.scss
+++ b/src/app/(profile)/(components)/MyProfile/ProfileTopBar/ProfileTopBar.module.scss
@@ -47,3 +47,10 @@
   line-height: 20px;
   font-size: 14px;
 }
+
+.mobileView {
+  display: flex;
+  @include mobile {
+    display: none;
+  }
+}
